10:
- Rebuild

9:
- Update to 18.1

8:
- Update to 18.0

7:
- Service after/requires multi-user.target network-online.target

6:
- Rebuild

5:
- Remove add-on repository

4:
- Add p7zip
- Set MainDir to add-on home

3:
- Add unrar

2:
- Edit disclaimer

1:
- Initial add-on